- replace ZMEvents/Events code with new event dispatcher and remove
- remove ZMRequestHandler interface in favour of a new event
- deprecate ZM_PAGE_KEY
- drop ZM_DB_PREFIX
- drop setting 'enableZMCheckoutShipping'
- drop settings 'configureLocale' and 'isEnablePatching'
- introduce setting 'zenmagick.core.security.defaultAuthenticationProvider'

Release 0.9.11.1
- remove debug code
- fix misplaced lib/plugins folder in release packages

Release 0.9.11
- wrap up apidocs in zip after creation
- add Plugin::getDependencies() [not yet used]
- googleAnalytics: remove deprecated urchin code
- remove deprecated zm_get_email_contents() function
- remove deprecated REGISTERED/GUEST/ANONYMOUS consts from 
  ZMZenCartAccountSacsHandler
- remove deprecated getUseFunction()/setUseFunction() in ZMConfigValue
- add info property to ZMPaymentType
- change admin url schekda to default
- autoLogin: add options to accept url parameter token
- add HEAD support to ZMController
- add ZMPaymentTypes to eventually replace the dodgy ZMPayments
- ZMShoppingCart: change getPaymentMethodId to getPaymentTypeId; templates
  affected: checkout_payment.php
- fix regression in payment JS validation: checkout_payment.php
- display payment details in order history: account_history_info.php
- use new ZMPaymentTypes service; deprecate ZMPayments
- add ZMPaymentType::getInfo() to display additional info; templates:
  checkout_confirmation.php, checkout_payment.php, checkout.html.php,
  checkout.text.php
- changed name/signature of cart method to get payment validation JS;
  template: checkout_payment.php
- change ZMShoppingCart::getOrderFormContent(), add
	$request parameter; template: checkout_confirmation.php
- change ZMShoppingCart::getOrderFormURL() to getOrderFormUrl() and add
	$request parameter; template: checkout_confirmation.php
- add price class to all price <p> elements in sideboxes
- sidebox: manufacturers: set size to 1
- changed apps/xxx/config/defaults.yaml to config.yaml